--- a/Practical work№1/Task3/Converting decimal numbers/Converting decimal numbers/MainWindow.xaml
+++ b/Practical work№1/Task3/Converting decimal numbers/Converting decimal numbers/MainWindow.xaml
@@ -29,7 +29,19 @@
                   Width="113" Height="20" 
                   SelectionChanged="ComboBox_SelectionChanged">
             <ComboBoxItem Content="Двоичная" Tag="2"/>
+            <ComboBoxItem Content="Троичная" Tag="3"/>
+            <ComboBoxItem Content="Четверичная" Tag="4"/>
+            <ComboBoxItem Content="Пятиричная" Tag="5"/>
+            <ComboBoxItem Content="Шестиричная" Tag="6"/>
+            <ComboBoxItem Content="Семеричная" Tag="7"/>
             <ComboBoxItem Content="Восьмеричная" Tag="8"/>
+            <ComboBoxItem Content="Девятиричная" Tag="9"/>
+            <ComboBoxItem Content="Десятеричная" Tag="10"/>
+            <ComboBoxItem Content="Одиннадцатеричная" Tag="11"/>
+            <ComboBoxItem Content="Двенадцатеричная" Tag="12"/>
+            <ComboBoxItem Content="Тринадцатеричная" Tag="13"/>
+            <ComboBoxItem Content="Четырнадцатеричная" Tag="14"/>
+            <ComboBoxItem Content="Пятнадцатеричная"  Tag="15"/>
             <ComboBoxItem Content="Шестнадцатиричная" Tag="16" />
         </ComboBox>
         <Button x:Name="convert"
