--- a/Practical work№2/Task1/GCDAlgorithms/GCDAlgorithms/MainWindow.xaml
+++ b/Practical work№2/Task1/GCDAlgorithms/GCDAlgorithms/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GCDAlgorithms"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="НОД" Height="450" Width="800">
     <Grid>
 
         <Border BorderBrush="Black" 
