--- a/Practical work№2/Task3/SteinAlgorihtm/SteinAlgorihtm/MainWindow.xaml
+++ b/Practical work№2/Task3/SteinAlgorihtm/SteinAlgorihtm/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SteinAlgorihtm"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Штейн" Height="450" Width="800">
     <Grid>
         <Border BorderBrush="Black" 
                 BorderThickness="1" 
