--- a/Practical work№2/Task4/Matrix/Matrix/MainWindow.xaml
+++ b/Practical work№2/Task4/Matrix/Matrix/MainWindow.xaml
@@ -6,51 +6,54 @@
         xmlns:local="clr-namespace:Matrix"
         mc:Ignorable="d"
         Title="Matrix" Height="450" Width="800">
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
-    <Grid>
-        <Border BorderBrush="Black" 
-                BorderThickness="1" 
-                HorizontalAlignment="Left" 
-                Height="66" 
-                VerticalAlignment="Top" 
-                Width="809"
-                Background="Crimson">
+        <!-- Управление -->
+        <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Center">
+            <TextBox x:Name="aRows" Width="25" Text="2" TextAlignment="Center"/>
+            <TextBlock Text="×" VerticalAlignment="Center" Margin="2"/>
+            <TextBox x:Name="aCols" Width="25" Text="3" TextAlignment="Center"/>
 
-            <Label Content="Умножение матриц" 
-                   HorizontalAlignment="Center" 
-                   Margin="0,9,0,0" 
-                   VerticalAlignment="Top" 
-                   FontFamily="Times New Roman" 
-                   FontSize="30"
-                   Foreground="White"/>
-        </Border>
+            <TextBlock Text="  ×  " VerticalAlignment="Center" Margin="10,0"/>
 
-        <Grid Margin="10,80,473,217" ShowGridLines="True">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
+            <TextBlock x:Name="bRows" Text="3" Width="25" TextAlignment="Center" Background="LightGray"/>
+            <TextBlock Text="×" VerticalAlignment="Center" Margin="2"/>
+            <TextBox x:Name="bCols" Width="25" Text="2" TextAlignment="Center"/>
+
+            <Button Content="Обновить" Click="Update" Margin="10,0" Padding="8,3"/>
+            <Button Content="Случайно" Click="Random" Margin="5,0" Padding="8,3"/>
+            <Button Content="Умножить" Click="Multiply" Margin="5,0" Padding="8,3" Background="LightBlue"/>
+        </StackPanel>
+
+        <!-- Матрицы -->
+        <Grid Grid.Row="1" Margin="0,10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            
-            <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" 
-               Text="Matrix 1" FontWeight="Bold" 
-               HorizontalAlignment="Center" Padding="5"/>
+            <GroupBox Grid.Column="0" Header="A" Padding="5">
+                <Grid x:Name="aGrid"/>
+            </GroupBox>
 
-            
-            <TextBox Grid.Row="1" Grid.Column="0" Text="1" Padding="5" Name="Matrix1_R1C1"/>
-            <TextBox Grid.Row="1" Grid.Column="1" Text="4" Padding="5" Name="Matrix1_R1C2"/>
+            <TextBlock Grid.Column="1" Text="×" FontSize="16" VerticalAlignment="Center" Margin="5,0"/>
 
-            <TextBox Grid.Row="2" Grid.Column="0" Text="2" Padding="5" Name="Matrix1_R2C1"/>
-            <TextBox Grid.Row="2" Grid.Column="1" Text="5" Padding="5" Name="Matrix1_R2C2"/>
+            <GroupBox Grid.Column="2" Header="B" Padding="5">
+                <Grid x:Name="bGrid"/>
+            </GroupBox>
 
-            <TextBox Grid.Row="3" Grid.Column="0" Text="3" Padding="5" Name="Matrix1_R3C1"/>
-            <TextBox Grid.Row="3" Grid.Column="1" Text="6" Padding="5" Name="Matrix1_R3C2"/>
+            <TextBlock Grid.Column="3" Text="=" FontSize="16" VerticalAlignment="Center" Margin="5,0"/>
+
+            <GroupBox Grid.Column="4" Header="A × B" Padding="5">
+                <Grid x:Name="cGrid"/>
+            </GroupBox>
         </Grid>
     </Grid>
 </Window>
