--- a/Practical work№5/Task1/MainPage.xaml
+++ b/Practical work№5/Task1/MainPage.xaml
@@ -4,38 +4,28 @@
              x:Class="Task1.MainPage">
 
     <ScrollView>
-        <VerticalStackLayout
-            Spacing="25"
-            Padding="30,0"
-            VerticalOptions="Center">
+        <VerticalStackLayout Padding="20">
 
-            <Image
-                Source="dotnet_bot.png"
-                SemanticProperties.Description="Cute dot net bot waving hi to you!"
-                HeightRequest="200"
-                HorizontalOptions="Center" />
+    <Label Text="Выберите систему измерений:"/>
+    
+    <Picker x:Name="UnitsPicker">
+        <Picker.Items>
+            <x:String>Metric</x:String>
+            <x:String>Imperial</x:String>
+        </Picker.Items>
+    </Picker>
 
-            <Label
-                Text="Hello, World!"
-                SemanticProperties.HeadingLevel="Level1"
-                FontSize="32"
-                HorizontalOptions="Center" />
+    <Button Text="Создать устройство" Clicked="CreateDevice_Click"/>
+    <Button Text="Старт" Clicked="Start_Click"/>
+    <Button Text="Стоп" Clicked="Stop_Click"/>
 
-            <Label
-                Text="Welcome to .NET Multi-platform App UI"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                FontSize="18"
-                HorizontalOptions="Center" />
+    <Button Text="Показать Metric" Clicked="ShowMetric_Click"/>
+    <Button Text="Показать Imperial" Clicked="ShowImperial_Click"/>
+    <Button Text="Показать Raw Data" Clicked="ShowRaw_Click"/>
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Center" />
+    <Label x:Name="OutputLabel" Text="Результат появится здесь" Margin="0,20,0,0"/>
 
-        </VerticalStackLayout>
+</VerticalStackLayout>
     </ScrollView>
 
 </ContentPage>
