--- a/Practical work№5/Task1/AppShell.xaml
+++ b/Practical work№5/Task1/AppShell.xaml
@@ -7,7 +7,7 @@
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
-        Title="Home"
+        Title="Controller"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
 
