--- a/Practical work№5/Task1/MainPage.xaml
+++ b/Practical work№5/Task1/MainPage.xaml
@@ -15,13 +15,37 @@
         </Picker.Items>
     </Picker>
 
-    <Button Text="Создать устройство" Clicked="CreateDevice_Click"/>
-    <Button Text="Старт" Clicked="Start_Click"/>
-    <Button Text="Стоп" Clicked="Stop_Click"/>
+    <Button Text="Создать устройство" Clicked="CreateDevice_Click"
+        CornerRadius ="16" 
+        Margin="5"
+        TextColor="Black"
+        BackgroundColor="Yellow"/>
+    <Button Text="Старт" Clicked="Start_Click"
+        CornerRadius="16"
+        Margin="5"
+        TextColor="White"
+        BackgroundColor="Red"/>
+    <Button Text="Стоп" Clicked="Stop_Click"
+        CornerRadius ="16"
+        Margin="5"
+        TextColor="White"
+        BackgroundColor="BLue"/>
 
-    <Button Text="Показать Metric" Clicked="ShowMetric_Click"/>
-    <Button Text="Показать Imperial" Clicked="ShowImperial_Click"/>
-    <Button Text="Показать Raw Data" Clicked="ShowRaw_Click"/>
+    <Button Text="Показать Metric" Clicked="ShowMetric_Click"
+        CornerRadius="16"
+        Margin="5"
+        TextColor="White"
+        BackgroundColor="Green"/>
+    <Button Text="Показать Imperial" Clicked="ShowImperial_Click"
+        CornerRadius="16"
+        Margin="5"
+        TextColor="White"
+        BackgroundColor="Brown"/>
+    <Button Text="Показать Raw Data" Clicked="ShowRaw_Click"
+        CornerRadius="16"
+        Margin="5"
+        TextColor ="White"
+        BackgroundColor="Black"/>
 
     <Label x:Name="OutputLabel" Text="Результат появится здесь" Margin="0,20,0,0"/>
 
