--- a/Practical work№7/Task1/File/File/MainWindow.xaml
+++ b/Practical work№7/Task1/File/File/MainWindow.xaml
@@ -35,7 +35,7 @@
                 VerticalAlignment="Top" 
                 Width="282" Height="43" FontSize="18" 
                 Click="Read_Click"/>
-        
+
         <TextBox x:Name="Answer"
             HorizontalAlignment="Left" 
                  Margin="10,331,0,0" 
@@ -43,7 +43,7 @@
                  VerticalAlignment="Top"
                  Width="770" 
                  Height="85"/>
-        
+
         <!-- Поле для ввода текста-->
         <TextBox x:Name="input"
             HorizontalAlignment="Left" 
@@ -51,7 +51,7 @@
                  TextWrapping="Wrap" 
                  VerticalAlignment="Top" 
                  Width="262" Height="78"/>
-        
+
         <Button Content="Записать" 
                 HorizontalAlignment="Left" 
                 Margin="311,139,0,0" 
@@ -59,7 +59,7 @@
                 Width="125" 
                 Height="25"
                 Click="Write_Click"/>
-        
+
         <Button Content="Удалить" 
                 HorizontalAlignment="Left" 
                 Margin="311,178,0,0" 
@@ -67,6 +67,30 @@
                 Width="125" 
                 Height="26"
                 Click="Delete_Click"/>
+
+        <Button Content="Создать бинарный файл" 
+                HorizontalAlignment="Left" 
+                Height="24" 
+                Margin="517,65,0,0" 
+                VerticalAlignment="Top" 
+                Width="142"
+                Click="ChooseBin_Click"/>
+        
+        <Button Content="Записать" 
+            HorizontalAlignment="Left" 
+            Margin="478,139,0,0" 
+            VerticalAlignment="Top" 
+            Width="125" 
+            Height="25"
+            Click="WriteBin_Click"/>
+        
+        <Button Content="Чтение" 
+            HorizontalAlignment="Left" 
+            Margin="629,139,0,0" 
+            VerticalAlignment="Top" 
+            Width="125" 
+            Height="25"
+            Click="ReadBin_Click"/>
 
     </Grid>
 </Window>
